Updated design and updated making of gradesheet features

--- a/website/templates/admin/groups/delete_group.html
+++ b/website/templates/admin/groups/delete_group.html
@@ -1,14 +1,5 @@
-{% extends "admin.html" %}
-{% block title %}Home Page{% endblock %}
-{% block pagename %}
-    Groups
-{% endblock %}
-{% block button %}
-<a href="/new_group/">
-    <button>Create New Group</button>
-</a>
-{% endblock %}
-{% block content %}
+{% extends "groups/groups.html" %}
+{% block overlay %}
     <div id="overlay">
         <div id="text">
             <div id='close_button' onclick="off()">
@@ -25,38 +16,5 @@
                 </form>
             </div>
         </div>
-    </div>
-
-        <div class='display_grid'>
-        {% if groups %}
-            {% for group in groups %}
-                <div class='box'
-                    <p>ID: {{group.id}}</p>
-                    <p>Group Name: {{group.name}}</p>
-                    <p>Project Title: {{ group.project_title }}</p>
-                    <p>Program: {{group.program}}</p>
-                    <p>Members:</p>
-                    <ul>
-                        {% for member in group.members %}
-                            <li>{{ member.stud_no }} - {{ member.last_name }}, {{ member.first_name }} {{ member.middle_in }}.</li>
-                        {% endfor%}
-                    </ul>
-                    
-                    <p>Defenses:</p>
-                    <ul>
-                        {% for defense in group.defenses %}
-                            <li>{{ defense.id }} - {{ defense.start_date }} </li>
-                        {% endfor%}
-                    </ul>
-                    
-                    <a href="/edit_group/{{group.id}}">
-                        <button>Edit</button>
-                    </a>
-                    <a href="/delete_group/{{group.id}}">
-                        <button>Delete</button>
-                    </a>
-                </div>
-            {% endfor %}
-        {% endif %}
     </div>
 {% endblock %}
