--- a/website/templates/admin/admin.html
+++ b/website/templates/admin/admin.html
@@ -2,6 +2,7 @@
     <head>
         <link rel='stylesheet' href="{{ url_for('static', filename ='admin/new_style.css') }}">
         <title>{% block title %}{% endblock %}</title>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
     </head>
     <nav>
@@ -33,7 +34,7 @@
                 <h1>{% block pagename %}{% endblock %}</h1>
             </div>
             <div class='search_part'>
-                <input type="text" name="search" placeholder="Search..">
+                <input type="text" name="search" placeholder="Search...">
             </div>
             <div class='create_button'>
                 {% block button %}
@@ -41,6 +42,9 @@
             </div>
 
         </div>
+        
+        {% block overlay %}
+        {% endblock %}  
 
         <div class='content'>
             {% block content %}
