--- a/website/templates/admin/gradesheets/edit_sheet.html
+++ b/website/templates/admin/gradesheets/edit_sheet.html
@@ -10,228 +10,64 @@ Gradesheets
 {% endblock %}
 {% block content %}
 <body onload='check()'>
-    <style>
-       .MultiCheckBox {
-           background-color: white;
-            border:1px solid #e2e2e2;
-            padding: 5px;
-            border-radius:4px;
-            cursor:pointer;
-        }
-
-        .MultiCheckBox .k-icon{ 
-            font-size: 15px;
-            float: right;
-            font-weight: bolder;
-            margin-top: -1px;
-            height: 10px;
-            width: 14px;
-            color:#787878;
-        } 
-
-        .MultiCheckBoxDetail {
-            display:none;
-            position:absolute;
-            border:1px solid #e2e2e2;
-            overflow-y:hidden;
-        }
-
-        .MultiCheckBoxDetailBody {
-            background-color: pink;
-            overflow-y:scroll;
-        }
-
-        .MultiCheckBoxDetail .cont  {
-            clear:both;
-            overflow: hidden;
-            padding: 2px;
-        }
-
-        .MultiCheckBoxDetail .cont:hover  {
-            background-color:#cfcfcf;
-        }
-
-        .MultiCheckBoxDetailBody > div > div {
-            float:left;
-        }
-
-        .MultiCheckBoxDetail>div>div:nth-child(1) {
-        
-        }
-
-        .MultiCheckBoxDetailHeader {
-            overflow:hidden;
-            position:relative;
-            height: 40px;
-            background-color:#3d3d3d;
-        }
-
-        .MultiCheckBoxDetailHeader>input {
-            position: absolute;
-            top: 15px;
-            left: 3px;
-        }
-
-        .MultiCheckBoxDetailHeader>div {
-            position: absolute;
-            top: 5px;
-            left: 24px;
-            color:#fff;
-        }
-
-        .mulinput {
-            position: relative;
-            top: 12px;
-            margin-right: 9px;
-        }
-        
-
-    </style>
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-
-    <script>
-        var arr = [];
-        '{% for rubric in to_edit.rubric %}'
-            arr.push('{{ rubric.id }}')
-        '{% endfor %}'
-
-        console.log(arr)
-
-        $(document).ready(function () {
-            $(document).on("click", ".MultiCheckBox", function () {
-                var detail = $(this).next();
-                detail.show();
-            });
-
-            $(document).on("click", ".MultiCheckBoxDetailHeader input", function (e) {
-                e.stopPropagation();
-                var hc = $(this).prop("checked");
-                $(this).closest(".MultiCheckBoxDetail").find(".MultiCheckBoxDetailBody input").prop("checked", hc);
-                $(this).closest(".MultiCheckBoxDetail").next().UpdateSelect();
-            });
-
-            $(document).on("click", ".MultiCheckBoxDetailHeader", function (e) {
-                var inp = $(this).find("input");
-                var chk = inp.prop("checked");
-                inp.prop("checked", !chk);
-                $(this).closest(".MultiCheckBoxDetail").find(".MultiCheckBoxDetailBody input").prop("checked", !chk);
-                $(this).closest(".MultiCheckBoxDetail").next().UpdateSelect();
-            });
-
-            $(document).on("click", ".MultiCheckBoxDetail .cont input", function (e) {
-                e.stopPropagation();
-                $(this).closest(".MultiCheckBoxDetail").next().UpdateSelect();
-
-                var val = ($(".MultiCheckBoxDetailBody input:checked").length == $(".MultiCheckBoxDetailBody input").length)
-                $(".MultiCheckBoxDetailHeader input").prop("checked", val);
-            });
-
-            $(document).on("click", ".MultiCheckBoxDetail .cont", function (e) {
-                var inp = $(this).find("input");
-                var chk = inp.prop("checked");
-                inp.prop("checked", !chk);
-
-                var multiCheckBoxDetail = $(this).closest(".MultiCheckBoxDetail");
-                var multiCheckBoxDetailBody = $(this).closest(".MultiCheckBoxDetailBody");
-                multiCheckBoxDetail.next().UpdateSelect();
-
-                var val = ($(".MultiCheckBoxDetailBody input:checked").length == $(".MultiCheckBoxDetailBody input").length)
-                $(".MultiCheckBoxDetailHeader input").prop("checked", val);
-            });
-
-            $(document).mouseup(function (e) {
-                var container = $(".MultiCheckBoxDetail");
-                if (!container.is(e.target) && container.has(e.target).length === 0) {
-                    container.hide();
-                }
-            });
-        });
-
-        var defaultMultiCheckBoxOption = { width: '220px', defaultText: 'Select Below', height: '200px' };
-
-        jQuery.fn.extend({
-            CreateMultiCheckBox: function (options) {
-
-                var localOption = {};
-                localOption.width = (options != null && options.width != null && options.width != undefined) ? options.width : defaultMultiCheckBoxOption.width;
-                localOption.defaultText = (options != null && options.defaultText != null && options.defaultText != undefined) ? options.defaultText : defaultMultiCheckBoxOption.defaultText;
-                localOption.height = (options != null && options.height != null && options.height != undefined) ? options.height : defaultMultiCheckBoxOption.height;
-
-                this.hide();
-                this.attr("multiple", "multiple");
-                var divSel = $("<div class='MultiCheckBox'>" + localOption.defaultText + "<span class='k-icon k-i-arrow-60-down'><svg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='sort-down' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512' class='svg-inline--fa fa-sort-down fa-w-10 fa-2x'><path fill='currentColor' d='M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z' class=''></path></svg></span></div>").insertBefore(this);
-                divSel.css({ "width": localOption.width });
-
-                var detail = $("<div class='MultiCheckBoxDetail'><div class='MultiCheckBoxDetailHeader'><input type='checkbox' class='mulinput' value='-1982' /><div>Select All</div></div><div class='MultiCheckBoxDetailBody'></div></div>").insertAfter(divSel);
-                detail.css({ "width": parseInt(options.width) + 10, "max-height": localOption.height });
-                var multiCheckBoxDetailBody = detail.find(".MultiCheckBoxDetailBody");
-
-                
-                this.find("option").each(function () {
-                    var val = $(this).attr("value");
-                    if (val == undefined)
-                        val = '';
-
-                    
-                    if (arr.includes(val.toString())) {
-                        multiCheckBoxDetailBody.append("<div class='cont'><div><input type='checkbox' class='mulinput' value='" + val + "' checked/></div><div>" + $(this).text() + "</div></div>");
-                    } else {
-                        multiCheckBoxDetailBody.append("<div class='cont'><div><input type='checkbox' class='mulinput' value='" + val + "' /></div><div>" + $(this).text() + "</div></div>");
-                    }
-                });
-
-                multiCheckBoxDetailBody.css("max-height", (parseInt($(".MultiCheckBoxDetail").css("max-height")) - 28) + "px");
-            },
-            UpdateSelect: function () {
-                arr = [];
-
-                this.prev().find(".mulinput:checked").each(function () {
-                    arr.push($(this).val());
-                });
-
-                this.val(arr);
-                console.log(arr);
-            },
-        });
-
-        $(document).ready(function () {
-            $("#test").CreateMultiCheckBox({ width: '500px', defaultText : 'Select Below', height:'240px' });
-        });
-    </script>
-
     {% set rub_type = to_edit.sheet_type %}
+    {% set rub_arr = [] %}
     <div id="overlay">
-        <div id="text">
-            <div id='close_button'>
-                <a href='/gradesheets'>
-                    <img src="{{ url_for('static', filename='close.png') }}">
-                </a>
-                
+        <div class='container'>
+            <div class='header_div'>
+                <div class='header_title'>
+                    <p>Edit Template</p>
+                </div>
+                <div class='close_button'>
+                    <a href='/gradesheets/'>
+                        <img src="{{ url_for('static', filename='close.png') }}">
+                    </a>
+                </div>
             </div>
 
-            <p>Edit Gradesheet Template</p>
-            <div>
+            <div class='content_div'>
                 <form method='POST'>
-                    <label for="sheetCode">Gradesheet Code:</label>
-                    <input type='text' id='sheetCode' name='sheetCode' value ="{{ to_edit.id }}" disabled><br>
-                    <label>Rubric Type: {{ to_edit.sheet_type }}</label>
-                    <br>
+                    <div class='form_div'>
+                        <div class='query'>
+                            <label for="sheetCode">Gradesheet Code:</label>
+                            <span>
+                                <input type='text' id='sheetCode' name='sheetCode' value ="{{ to_edit.id }}" disabled>
+                            </span>
+                        </div>
+                        
+                        {% if to_edit.sheet_type == 'Group' %}
+                            <label for="pblLvl">PBL Level:</label>
+                            <span>
+                                <input onchange='pbl_level();' type="radio" id="pbl1" name="pblLvl" value="PBL1" required>
+                                <label for="pbl1">PBL1</label>
+                                <input onchange='pbl_level(); 'type="radio" id="pbl2" name="pblLvl" value="PBL2">
+                                <label for="pbl2">PBL2</label>
+                                <input onchange='pbl_level();' type="radio" id="pbl3" name="pblLvl" value="PBL3">
+                                <label for="pbl3">PBL3</label>
+                                <input onchange='pbl_level(); 'type="radio" id="pbl4" name="pblLvl" value="PBL4">
+                                <label for="pbl4">PBL4</label>
+                            </span>
+                        {% endif %}
+                        
+                        
+                        <label>Select Rubric(s) Below</label>
+                        <select id="test" name='rubrics', multiple required>
+                            {% for rubric in rubrics %}
+                                {% if rubric.rubric_type == rub_type %}
+                                    <option value="{{ rubric.id }}"{% if rubric in to_edit.rubric %} selected {% endif %}>{{ rubric.desc }} (x{{ rubric.weight }})</option>
+                                {% endif %}
+                            {% endfor %}
+                        </select>
 
-                    <label>Select Rubric(s) Below</label>
-                    <select id="test">
-                        {% for rubric in rubrics %}
-                            {% if rubric.rubric_type == rub_type %}
-                                <option value="{{ rubric.id }}">{{ rubric.desc }} (x{{ rubric.weight }})</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                    <input type='hidden' id='invis' name='invis' onclick='putHere();'>
-
-                    <button type='submit' id='submit' name='submit' onclick='putHere();'>Submit</button>
+                        <button type='submit' id='submit' name='submit'>Submit</button>
+                    </div>
+                    
                 </form>
             </div>
         </div>
     </div>
+
+
 
     <div class='display_grid'>
         {% if templates %}
@@ -265,35 +101,59 @@ Gradesheets
             document.getElementById('invis').value = arr;
         }
 
-        $(document).ready(function(){
-            $('select').on('change', function(event ) {
-                var prevValue = $(this).data('previous');
-            $('select').not(this).find('option[value="'+prevValue+'"]').show();    
-                var value = $(this).val();
-            $(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').hide();
-            });
-        });
+        function pbl_level() {
+            selected_value = $("input[name='pblLvl']:checked").val();
+            var clock = {
+                "key": selected_value //say
+            };
+            $.ajax({
+                url: '/parse_data/',
+                type: 'POST',
+                dataType: 'json',
+                data: JSON.stringify(clock),
+                contentType:"application/json; charset=UTF-8"
+            })
+            .done(function(data) {
+                window.location.href = "/edit_sheet/" +'{{ to_edit.id }}/' + data['key'];
+            })
+        }
 
 
-        $(document).ready(function () {
-            $("#submit").on("click", function() {
-                var js_data = JSON.stringify(submit());
-                $.ajax({
-                    url: "/new_group/",
-                    type : 'POST',
-                    contentType: 'application/json',
-                    dataType : 'json',
-                    data : js_data
-                }).done(function(result) {
-                    console.log(result);
-                    $("#data").html(result);
-                    console.log('SUCCESS')
-                    window.location.href = "/groups";
-                }).fail(function(jqXHR, textStatus, errorThrown) {
-                    console.log("fail: ",textStatus, errorThrown);
-                });
-            });
-        });
+        function check() {
+            var temp = 'empty' 
+            if ('{{ back_rub }}' != 'None' && '{{ data }}' != 'None') {
+                temp = '{{ data }}'
+            } else if ('{{ back_rub }}' == 'None') {
+                temp = '{{ data }}'
+            } else {
+                temp = '{{ back_rub }}'
+            }
+
+            if (temp == 'Individual') {
+                document.getElementById('individual').checked = true;
+                document.getElementById('rubrics').disabled = false;
+                document.getElementById('pbl1').disabled = true;
+                document.getElementById('pbl2').disabled = true;
+                document.getElementById('pbl3').disabled = true;
+                document.getElementById('pbl4').disabled = true;
+            } else {
+                document.getElementById('group').checked = true;
+                if (temp == 'PBL1') {
+                    document.getElementById('pbl1').checked = true;
+                    document.getElementById('rubrics').disabled = false;
+                } else if (temp == 'PBL2') {
+                    document.getElementById('pbl2').checked = true;
+                    document.getElementById('rubrics').disabled = false;
+                } else if (temp == 'PBL3') {
+                    document.getElementById('pbl3').checked = true;
+                    document.getElementById('rubrics').disabled = false;
+                } else if (temp == 'PBL4') {
+                    document.getElementById('pbl4').checked = true;
+                    document.getElementById('rubrics').disabled = false;
+                }
+            }
+        }
+
     </script>
 </body>
     
