--- a/website/templates/admin/groups/edit_group.html
+++ b/website/templates/admin/groups/edit_group.html
@@ -1,80 +1,58 @@
-{% extends "admin.html" %}
-{% block title %}Home Page{% endblock %}
-{% block pagename %}
-Groups
-{% endblock %}
-{% block button %}
-<a href="/new_group/">
-    <button>Create New Group</button>
-</a>
-{% endblock %}
-{% block content %}
+{% extends "groups/groups.html" %}
+{% block overlay %}
     <div id="overlay">
-        <div id="text">
-            
-            <div id='close_button' onclick="off()">
-                <a href='/groups'>
-                    <img src="{{ url_for('static', filename='close.png') }}">
-                </a>
-                
+        <div class='container'>
+            <div class='header_div'>
+                <div class='header_title'>
+                    <p>Edit Group</p>
+                </div>
+                <div class='close_button'>
+                    <a href='/groups/'>
+                        <img src="{{ url_for('static', filename='close.png') }}">
+                    </a>
+                </div>
             </div>
 
-            <div>
-                <p>Editing Group</p>
-                <form method="POST">
-                    <label for="groupCode">Group Code:</label>
-                    <input type='text' id='groupCode' name='groupCode' value ="{{ to_edit.id }}" disabled><br>
-                    <label for="groupName">Group Name:</label>
-                    <input type='text' id='groupName' name='groupName' value='{{ to_edit.name }}'><br>
-                    <label for="projectTitle">Project Title:</label>
-                    <input type='text' id='projectTitle' name='projectTitle' value='{{ to_edit.project_title }}'><br>
-                    <label for="program">Program:</label>
-                    <select name="program" id='program'>
-                        <option value='BSIT-AGD' {% if to_edit.program == 'BSIT-AGD' %}selected {% endif %}>BSIT-AGD</option>
-                        <option value='BSIT-DA' {% if to_edit.program == 'BSIT-DA' %}selected {% endif %}>BSIT-DA</option>
-                        <option value='BSIT-SMBA' {% if to_edit.program == 'BSIT-SMBA' %}selected {% endif %}>BSIT-SMBA</option>
-                        <option value='BSIT-WMA' {% if to_edit.program == 'BSIT-WMA' %}selected {% endif %}>BSIT-WMA</option>
-                        <option value='BSCS' {% if to_edit.program == 'BSCS' %}selected {% endif %}>BSCS</option>
-                        <option value='BMA' {% if to_edit.program == 'BMA' %}selected {% endif %}>BMA</option>
-                    </select>
-                    <br>
+            <div class='content_div'>
+                <div class='form_div'>
+                    <div class='query'>
+                        <label for="groupCode">Group Code:</label>
+                        <span>
+                            <input type='text' id='groupCode' name='groupCode' value ="{{ to_edit.id }}" disabled><br>
+                        </span>
+                    </div>
+
+                    <div class='query'>
+                        <label for="groupName">Group Name:</label>
+                        <span>
+                            <input type='text' id='groupName' name='groupName' value='{{ to_edit.name }}'>
+                        </span>
+                    </div>
+                        
+                    <div class='query'>
+                        <label for="projectTitle">Project Title:</label>
+                        <span>
+                            <input type='text' id='projectTitle' name='projectTitle' value='{{ to_edit.project_title }}'>
+                        </span>
+                    </div>
+
+                    <div class='query'>
+                        <label for="program">Program:</label>
+                        <span>
+                            <select name="program" id='program'>
+                                <option value='BSIT-AGD' {% if to_edit.program == 'BSIT-AGD' %}selected {% endif %}>BSIT-AGD</option>
+                                <option value='BSIT-DA' {% if to_edit.program == 'BSIT-DA' %}selected {% endif %}>BSIT-DA</option>
+                                <option value='BSIT-SMBA' {% if to_edit.program == 'BSIT-SMBA' %}selected {% endif %}>BSIT-SMBA</option>
+                                <option value='BSIT-WMA' {% if to_edit.program == 'BSIT-WMA' %}selected {% endif %}>BSIT-WMA</option>
+                                <option value='BSCS' {% if to_edit.program == 'BSCS' %}selected {% endif %}>BSCS</option>
+                                <option value='BMA' {% if to_edit.program == 'BMA' %}selected {% endif %}>BMA</option>
+                            </select>
+                        </span>
+                    </div>
+                    
                     <button id='submit' name='submit'>Submit</button>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-
-    <div class='display_grid'>
-        {% if groups %}
-            {% for group in groups %}
-                <div class='box'
-                    <p>ID: {{group.id}}</p>
-                    <p>Group Name: {{group.name}}</p>
-                    <p>Project Title: {{ group.project_title }}</p>
-                    <p>Program: {{group.program}}</p>
-                    <p>Members:</p>
-                    <ul>
-                        {% for member in group.members %}
-                            <li>{{ member.stud_no }} - {{ member.last_name }}, {{ member.first_name }} {{ member.middle_in }}.</li>
-                        {% endfor%}
-                    </ul>
-                    
-                    <p>Defenses:</p>
-                    <ul>
-                        {% for defense in group.defenses %}
-                            <li>{{ defense.id }} - {{ defense.start_date }} </li>
-                        {% endfor%}
-                    </ul>
-                    
-                    <a href="/edit_group/{{group.id}}">
-                        <button>Edit</button>
-                    </a>
-                    <a href="/delete_group/{{group.id}}">
-                        <button>Delete</button>
-                    </a>
-                </div>
-            {% endfor %}
-        {% endif %}
-    </div>
-    
 {% endblock %}
