--- a/website/templates/admin/rubrics/edit_rubric.html
+++ b/website/templates/admin/rubrics/edit_rubric.html
@@ -31,101 +31,136 @@ Rubrics
 
     <body onload='check()' id='bodybody'>
         <div id="overlay">
-            <div id="text">
-                
-                <div id='close_button' onclick="off()">
-                    <a href='/rubrics/'>
-                        <img src="{{ url_for('static', filename='close.png') }}">
-                    </a>
-                    
+            <div class='container'>
+                <div class='header_div'>
+                    <div class='header_title'>
+                        <p>Edit Rubric</p>
+                    </div>
+                    <div class='close_button'>
+                        <a href='/rubrics/'>
+                            <img src="{{ url_for('static', filename='close.png') }}">
+                        </a>
+                    </div>
                 </div>
-                <p>Edit Rubric</p>
 
-                <div style='overflow-y: scroll; height: 80vh;'>
+                <div class='content_div'>
+                    <form method='POST'>
+                        <div class='form_div'>
+                            <div class='query'>
+                                <label for="rubricCode">Rubric Code:</label>
+                                <span>
+                                    <input type='text' id='rubricCode' name='rubricCode' value ="{{ to_edit.id }}" disabled><br>
+                                </span>
+                            </div>
 
-                    <form method='POST' autocomplete='off'>
-                        <label for="rubricCode">Rubric Code:</label>
-                        <input type='text' id='rubricCode' name='rubricCode' value ="{{ to_edit.id }}" disabled><br>
+                            <input type='hidden' value='{{ to_edit.rubric_type }}' id='hidden_type'>
 
-                        <input type='hidden' value='{{ to_edit.rubric_type }}' id='hidden_type'>
+                            <div class='query'>
+                                <label for="rubType">Rubric Type:</label>
+                                <span>
+                                    <input type='text' id='rubricType' name='rubricType' value ="{{ to_edit.rubric_type }}" disabled><br>
+                                </span>
+                            </div>
 
-                        <label for="rubType">Rubric Type:</label>
-                        <input onclick="check()" type="radio" id="group" name="rubType" value="Group">
-                        <label for="group">Group</label>
-                        <input onclick="check()" type="radio" id="individual" name="rubType" value="Individual">
-                        <label for="individual">Individual</label>
-                        <br>
+                            <label for="pblLvl">PBL Level:</label>
+                            <span>
+                                {% for x in range(1, 5) %}
+                                    {% set temp = to_edit.pbl_lvl[3] | int %}
+                                    <input type="radio" id="pbl{{ x }}" name="pblLvl" value="PBL{{ x }}" {% if temp == x %}checked {% endif %}>
+                                    <label for="pbl{{ x }}">PBL{{ x }}</label>
+                                {% endfor %}
+                            </span>
+                            
 
-                        <label for="pblLvl">PBL Level:</label>
-                        {% for x in range(1, 5) %}
-                        {% set temp = to_edit.pbl_lvl[3] | int %}
-                        <input type="radio" id="pbl{{ x }}" name="pblLvl" value="PBL{{ x }}" {% if temp == x %}checked {% endif %}>
-                        <label for="pbl{{ x }}">PBL{{ x }}</label>
-                        {% endfor %}
-                        <br>
+                            <div class='query'>
+                                <label for="category">Category:</label>
+                                <span>
+                                    <input type='text' id='category' name='category' style='text-align: left;' required value='{{ to_edit.category }}'>
+                                </span>
+                            </div>
+
+                            <div class='query'>
+                                <label for="desc">Description:</label>
+                                <span>
+                                    <input type='text' id='desc' name='desc' style='text-align: left;' value='{{ to_edit.desc }}' required>
+                                </span>
+                            </div>
+
+                            <div class='query'>
+                                <label for='rate5'>Rate 5:</label>
+                                <span>
+                                    <textarea id='rate5' name='rate5' required>{{ to_edit.rate5 }}</textarea>
+                                </span>
+                            </div>
+
+                            <div class='query'>
+                                <label for='rate4'>Rate 4:</label>
+                                <span>
+                                    <textarea id='rate4' name='rate4' required>{{ to_edit.rate4 }}</textarea>
+                                </span>
+                            </div>
+
+                            <div class='query'>
+                                <label for='rate3'>Rate 3:</label>
+                                <span>
+                                    <textarea id='rate3' name='rate3' required>{{ to_edit.rate3 }}</textarea>
+                                </span>
+                            </div>
+
+                            <div class='query'>
+                                <label for='rate2'>Rate 2:</label>
+                                <span>
+                                    <textarea id='rate2' name='rate2' required>{{ to_edit.rate2 }}</textarea>
+                                </span>
+                            </div>
+
+                            <div class='query'>
+                                <label for='rate1'>Rate 1:</label>
+                                <span>
+                                    <textarea id='rate1' name='rate1' required>{{ to_edit.rate1 }}</textarea>
+                                </span>
+                            </div>
+
+                            <div class='query'>
+                                <label for="weight">Weight</label>
+                                <span>
+                                    <input type="number" id="weight" name='weight' autocomplete='off' min='1' max='9' value='{{ to_edit.weight }}' onkeydown='return false;'>
+                                </span>
+                            </div>
+                            <button type='submit' id='submit' name='submit'>Submit</button>
+                        </div>
                         
-                        <label for="category">Category:</label>
-                        <input type='text' id='category' name='category' style='text-align: left;' required value='{{ to_edit.category }}'><br>
-
-                        <label for="desc">Description:</label>
-                        <input type='text' id='desc' name='desc' style='text-align: left;' value='{{ to_edit.desc }}' required><br>
-
-                        <label for='rate5'>Rate 5:</label>
-                        <textarea id='rate5' name='rate5' required>{{ to_edit.rate5 }}</textarea>
-                        <br>
-
-                        <label for='rate4'>Rate 4:</label>
-                        <textarea id='rate4' name='rate4' required>{{ to_edit.rate4 }}</textarea>
-                        <br>
-
-                        <label for='rate3'>Rate 3:</label>
-                        <textarea id='rate3' name='rate3' required>{{ to_edit.rate3 }}</textarea>
-                        <br>
-
-                        <label for='rate2'>Rate 2:</label>
-                        <textarea id='rate2' name='rate2' required>{{ to_edit.rate2 }}</textarea>
-                        <br>
-
-                        <label for='rate1'>Rate 1:</label>
-                        <textarea id='rate1' name='rate1' required>{{ to_edit.rate1 }}</textarea>
-                        <br>
-
-                        <label for="weight">Weight</label>
-                        <input type="number" id="weight" name='weight' autocomplete='off' min='1' max='9' value='{{ to_edit.weight }}' onkeydown='return false;'>
-                        <br>
-                        
-                        <button type='submit' id='submit' name='submit'>Submit</button>
                     </form>
                 </div>
             </div>
         </div>
 
         <div class='display_grid'>
-        {% if rubrics %}
-            {% for rubric in rubrics %}
-                <div class='box'>
-                    <p>ID: {{ rubric.id }}</p>
-                    <p>Description: {{ rubric.desc }}</p>
-                    <p>Rate 5: {{ rubric.rate5 }}</p>
-                    <p>Rate 4: {{ rubric.rate4 }}</p>
-                    <p>Rate 3: {{ rubric.rate3 }}</p>
-                    <p>Rate 2: {{ rubric.rate2 }}</p>
-                    <p>Rate 1: {{ rubric.rate1 }}</p>
-                    <p>Weight: x{{ rubric.weight }}</p>
-                    <p>Rubric Type: {{ rubric.rubric_type }}</p>
-                    <p>PBL Level: {{ rubric.pbl_lvl }}</p>
-                    <p>Category: {{ rubric.category }}</p>
-                    <br>
-                    <a href="/edit_rubric/{{ rubric.id }}">
-                        <button>Edit</button>
-                    </a>
-                    <a href="/delete_rubric/ {{ rubric.id }}">
-                        <button>Delete</button>
-                    </a>
-                </div>
-            {% endfor %}
-        {% endif %}
-    </div>
+            {% if rubrics %}
+                {% for rubric in rubrics %}
+                    <div class='box'>
+                        <p>ID: {{ rubric.id }}</p>
+                        <p>Description: {{ rubric.desc }}</p>
+                        <p>Rate 5: {{ rubric.rate5 }}</p>
+                        <p>Rate 4: {{ rubric.rate4 }}</p>
+                        <p>Rate 3: {{ rubric.rate3 }}</p>
+                        <p>Rate 2: {{ rubric.rate2 }}</p>
+                        <p>Rate 1: {{ rubric.rate1 }}</p>
+                        <p>Weight: x{{ rubric.weight }}</p>
+                        <p>Rubric Type: {{ rubric.rubric_type }}</p>
+                        <p>PBL Level: {{ rubric.pbl_lvl }}</p>
+                        <p>Category: {{ rubric.category }}</p>
+                        <br>
+                        <a href="/edit_rubric/{{ rubric.id }}">
+                            <button>Edit</button>
+                        </a>
+                        <a href="/delete_rubric/ {{ rubric.id }}">
+                            <button>Delete</button>
+                        </a>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        </div>
 
         <script>
 
