--- a/website/templates/admin/schedules/delete_sched.html
+++ b/website/templates/admin/schedules/delete_sched.html
@@ -1,14 +1,6 @@
-{% extends "admin.html" %}
-{% block title %}Home Page{% endblock %}
-{% block pagename %}
-    Schedules
-{% endblock %}
-{% block button %}
-<a href="/new_sched/">
-    <button>Create New Defense Schedule</button>
-</a>
-{% endblock %}
-{% block content %}
+{% extends "schedules/schedule.html" %}
+{% block overlay %}
+    
     <div id="overlay">
         <div id="text">
             <div id='close_button' onclick="off()">
@@ -26,45 +18,5 @@
                 
             </div>
         </div>
-    </div>
-
-    <div class='display_grid'>
-        {% if defenses %}
-            {% for defense in defenses %}
-                <div class='box'>
-                    <p>ID: {{ defense.id }}</p>
-                    <p>Group Name: {{ defense.group.name }} </p>
-                    <p>Panels:</p>
-                    <ul>
-                        {% for panel in defense.panels %}
-                            {% if panel.id == defense.head_panel_id: %}
-                                <li>{{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}. - HP</li>
-                            {% else: %}
-                                <li>{{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</li>
-                            {% endif %}
-                        {% endfor %}
-                    </ul>
-                    <p>Defense Date: {{ defense.start_date}}</p>
-                    <a href="">
-                        <button>Assign Individual Gradesheet</button>
-                    </a>
-                    <br>
-                    <br>
-                    <a href="">
-                        <button>Assign Group Gradesheet</button>
-                    </a>
-                    <br>
-                    <br>
-                    <a href="/edit_sched/{{ defense.id }}">
-                        <button>Edit</button>
-                    </a>
-                    
-                    <a href="/delete_sched/{{ defense.id }}">
-                        <button>Delete</button>
-                    </a>
-                </div>
-                
-            {% endfor %}
-        {% endif %}
     </div>
 {% endblock %}
