--- a/website/templates/admin/schedules/schedule.html
+++ b/website/templates/admin/schedules/schedule.html
@@ -1,7 +1,7 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
 {% block pagename %}
-    Schedules
+    Defense Schedules
 {% endblock %}
 {% block button %}
 <a href="/new_sched/">
@@ -9,6 +9,16 @@
 </a>
 {% endblock %}
 {% block content %}
+    <script>
+        $(document).ready(function(){
+            $('select').on('change', function(event ) {
+                var prevValue = $(this).data('previous');
+            $('select').not(this).find('option[value="'+prevValue+'"]').show();    
+                var value = $(this).val();
+            $(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').hide();
+            });
+        });
+    </script>
     <div class='display_grid'>
         {% if defenses %}
             {% for defense in defenses %}
@@ -48,5 +58,4 @@
             {% endfor %}
         {% endif %}
     </div>
-    
 {% endblock %}
