--- a/website/templates/admin/students/delete_student.html
+++ b/website/templates/admin/students/delete_student.html
@@ -1,9 +1,5 @@
-{% extends "admin.html" %}
-{% block title %}Home Page{% endblock %}
-{% block pagename %}
-Students
-{% endblock %}
-{% block content %}
+{% extends "students/student.html" %}
+{% block overlay %}
     <div id="overlay">
         <div id="text">
             <div id='close_button' onclick="off()">
@@ -18,26 +14,7 @@ Students
                     <button id='submit' name='submit' value='yes'>Yes</button>
                     <button id='submit' name='submit' values='no'>No</button>
                 </form>
-                
             </div>
         </div>
-    </div>
-
-    <div class='display_grid'>
-        {% if students %}
-            {% for student in students %}
-                <div class='box'>
-                    <p>ID: {{ student.stud_no }}</p>
-                    <p>Name: {{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</p>
-                    <p>Group: {{ student.group_id }} - {{ student.group.name }}</p>
-                    <a href="/edit_student/{{ student.stud_no }}">
-                        <button>Edit</button>
-                    </a>
-                    <a href="/delete_student/{{ student.stud_no }}">
-                        <button>Delete</button>
-                    </a>
-                </div>
-            {% endfor %}
-        {% endif %}
     </div>
 {% endblock %}
