--- a/cal_temp_files_2/comm_sheet.css
+++ b/cal_temp_files_2/comm_sheet.css
@@ -40,6 +40,7 @@ th{
 
 td{
 	padding: 5px;
+	position: relative
 }
 
 .tb_title{
@@ -57,14 +58,8 @@ td{
 
 .but{
 	float: right;
-	width: 31.5%;
-	height: 50px;
-}
-
-.but2 {
-	border-radius: 0px;
 	width: 100%;
-	height: 100%;
+	height: 50px;
 }
 
 .green_bg{
@@ -107,14 +102,13 @@ td{
   
 }
 
-.text{
+.parent .text{
   resize: none;
   outline: none;
   width: 100%;
   border: none;
   height: 400px;
 }
-
 
 .topnav {
   overflow: hidden;
@@ -140,7 +134,7 @@ td{
   color: white;
 }
 .div1 { grid-area: 2 / 1 /  auto / 21; 
-	border-width: 0px 0px;	
+border-width: 0px 0px;
 }
 .div2 { grid-area: 3 / 1 /  auto / 21;
 	padding-top: 10px;
