--- a/website/templates/admin/rubrics/rubrics.html
+++ b/website/templates/admin/rubrics/rubrics.html
@@ -9,28 +9,57 @@
 </a>
 {% endblock %}
 {% block content %}
+	<head>
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/indiv_sheet.css') }}">
+	</head>
     <div class='display_grid'>
         {% if rubrics %}
             {% for rubric in rubrics %}
-                <div class='box'>
-                    <p>ID: {{ rubric.id }}</p>
-                    <p>Description: {{ rubric.desc }}</p>
-                    <p>Rate 5: {{ rubric.rate5 }}</p>
-                    <p>Rate 4: {{ rubric.rate4 }}</p>
-                    <p>Rate 3: {{ rubric.rate3 }}</p>
-                    <p>Rate 2: {{ rubric.rate2 }}</p>
-                    <p>Rate 1: {{ rubric.rate1 }}</p>
-                    <p>Weight: x{{ rubric.weight }}</p>
-                    <p>Rubric Type: {{ rubric.rubric_type }}</p>
-                    <p>PBL Level: {{ rubric.pbl_lvl }}</p>
-                    <p>Category: {{ rubric.category }}</p>
-                    <br>
-                    <a href="/edit_rubric/{{ rubric.id }}">
-                        <button>Edit</button>
-                    </a>
-                    <a href="/delete_rubric/ {{ rubric.id }}">
-                        <button>Delete</button>
-                    </a>
+                <div class='div1'>
+					<table>
+						<th class = "tb_desc">ID:</th>
+						<td colspan = "3">{{ rubric.id }}</td>
+						<tr>
+						<th class = "tb_desc">Description:</th>
+						<td colspan = "3">{{ rubric.desc }}</td>
+						<tr>
+						<th>Rate 5:</th> 
+						<td colspan = "3">{{ rubric.rate5 }}</td>
+						<tr>
+						<th>Rate 4:</th> 
+						<td colspan = "3">{{ rubric.rate4 }}</td>
+						<tr>
+						<th>Rate 3:</th> 
+						<td colspan = "3">{{ rubric.rate3 }}</td>
+						<tr>
+						<th>Rate 2:</th> 
+						<td colspan = "3">{{ rubric.rate2 }}</td>
+						<tr>
+						<th>Rate 1:</th> 
+						<td colspan = "3">{{ rubric.rate1 }}</td>
+						<tr>
+						<th>Weight:</th>
+						<td>x{{ rubric.weight }}</td>
+						<th class = "tb_desc">Rubric Type:</th> 
+						<td>{{ rubric.rubric_type }}</td>
+						<tr>
+						<th>PBL Level:</th>
+						<td>{{ rubric.pbl_lvl }}</td>
+						<th>Category:</th> 
+						<td>{{ rubric.category }}</td>
+						<br>
+						<tr>
+						<th colspan = "2">
+							<a href="/edit_rubric/{{ rubric.id }}">
+								<button class = "but2">Edit</button>
+							</a>
+						</th>
+						<th colspan = "2">
+							<a href="/delete_rubric/ {{ rubric.id }}">
+								<button class = "but2">Delete</button>
+							</a>
+						</th>
+					<table>
                 </div>
             {% endfor %}
         {% endif %}
